prevent table from wrapping

--- a/css/site.css
+++ b/css/site.css
@@ -26,9 +26,11 @@ img.pic {
   display: flex;
   justify-content: center;
   padding-top: 50px;
+  overflow-x: auto;
 }
 
 table {
+  width: max-content;
   padding: 10px;
   background-color: white;
   box-shadow: 0 5px 25px rgba(0, 0, 0, .5);
@@ -52,7 +54,6 @@ img {
 
 .number {
   width: 50px;
-  height: 50px;
   margin-top: -75px;
   margin-left: 40px;
   z-index: 1;
